@@ -17,6 +17,9 @@
 
 using namespace std;
 
+// This inserter may or may not be needed for your ORB.
+#if !defined (GEN_OSTREAM_OPS)
+
 // Show the details for a thermometer or thermostat.
 static std::ostream &
 operator<<(std::ostream & os, CCS::Thermometer_ptr t)
@@ -82,8 +85,6 @@ operator<<(std::ostream & os, const CCS::Controller::EChange & ec)
 
 // Generic ostream inserter for exceptions. Inserts the exception
 // name, if available, and the repository ID otherwise.
-
- #if 0   // This inserter may or may not be needed for your ORB.
 
 static std::ostream &
 operator<<(std::ostream & os, const CORBA::Exception & e)
